--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,17 @@
 name = "mimg"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+readme = "Readme.md"
+repository = "https://github.com/MathijsdeBoer/mimg"
+keywords = ["medical imaging", "image processing", "dicom"]
+categories = ["mathematics", "science", "multimedia", "encoding"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ndarray = { version = "0.15.4", features = ["blas", "rayon"] }
+blas-src = { version = "0.8.0", features = ["openblas"] }
+openblas-src = { version = "0.10.4", features = ["cblas", "system"] }
+rayon = "1.5.3"
+dicom = "0.5.0"
