--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ categories = ["mathematics", "science", "multimedia", "encoding"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ndarray = { version = "0.15.4", features = ["blas", "rayon"] }
-blas-src = { version = "0.8.0", features = ["openblas"] }
-openblas-src = { version = "0.10.4", features = ["cblas", "system"] }
-rayon = "1.5.3"
+ndarray = "0.15.4"
+ndarray-linalg = "0.14.1"
+ndarray-stats = "0.5.0"
+ndarray-rand = "0.14.0"
 dicom = "0.5.0"
